# openlr-lab

./: .gitignore  CLAUDE.md  Cargo.toml  DecodingSteps.md  Diagnosis.md  MCPImplementation.md  OpenLREngine.md  OpenLR_LLM_Context.md  PreProcessing.md  README.md  WebFrontend.md
crates/openlr-codec/src/: lrp.rs
crates/openlr-encoder/: Cargo.toml
crates/openlr-encoder/src/: coverage.rs  diagnose.rs  expansion.rs  lib.rs  line.rs  pal.rs
crates/openlr-encoder/tests/: real_map_round_trip.rs
crates/openlr-engine/src/: astar.rs  candidate.rs  lib.rs  params.rs  trace.rs  wkt.rs
crates/openlr-engine/tests/: de_decode.rs
crates/openlr-graph/src/: graph.rs  lib.rs  node.rs  path_search.rs  segment.rs  tile.rs
crates/openlr-provider/src/: lib.rs  tile_reader.rs
crates/openlr-wasm/: Cargo.toml
crates/openlr-wasm/src/: lib.rs
fixtures/: wellington-tiny.osm.pbf
pipeline/: Cargo.toml
pipeline/schema/: canonical_schema.sql
pipeline/src/: adapt.rs  build.rs  canonical_low_memory.rs  canonical_schema.rs  cli.rs  extent.rs  extract.rs  generic_extract.rs  generic_low_memory.rs  lowmem_tile.rs  main.rs  merge.rs  osm_adapt.rs  osm_low_memory.rs  osm_schema.rs  quantize.rs  restrictions.rs  split.rs  tile.rs
web/: .env.production  package-lock.json  package.json  vite.config.js  wrangler.toml
web/functions/tiles/: [[path]].js
web/src/: App.css  App.jsx  diagnosis.js  llmClient.js  llmDiagnosis.js  main.js  refFormat.js  renderLlmText.jsx  replayEngine.js  store.js  tileDecoder.js  tourSampleData.js  utils.js  wasm.js
web/src/components/: BottomBar.jsx  (+12 more)
(+7 files in other folders)
