[package]
name    = "openlr-wasm"
edition.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
openlr-codec    = { path = "../openlr-codec" }
openlr-engine   = { path = "../openlr-engine" }
openlr-provider = { path = "../openlr-provider" }
openlr-graph    = { path = "../openlr-graph" }
openlr-encoder  = { path = "../openlr-encoder" }
serde.workspace     = true
serde_json          = "1"
wasm-bindgen        = "0.2"
console_error_panic_hook = "0.1"
